<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="be.ictera.wanderlust.AddEncounterActivity"
    tools:showIn="@layout/activity_add_encounter">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewAddEncounterFirstStepText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50px"
                android:gravity="center"
                android:lineSpacingExtra="-20sp"
                android:text="@string/AdddEncounterStep1"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="24sp" />
        </TableRow>
        <TableRow>
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewAddEncounterAddPicturesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="80px"
                android:gravity="center"
                android:text="@string/AdddEncounterAddPics"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/Pic1"
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/notification_large_icon_height"
                android:background="@drawable/image_border"
                android:layout_marginBottom="80px"
                app:srcCompat="@android:drawable/ic_menu_camera" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/Pic2"
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/notification_large_icon_height"
                android:background="@drawable/image_border"
                android:layout_marginBottom="80px"
                app:srcCompat="@android:drawable/ic_menu_camera" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/Pic3"
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/notification_large_icon_height"
                android:background="@drawable/image_border"
                android:layout_marginBottom="80px"
                app:srcCompat="@android:drawable/ic_menu_camera" />
        </TableRow>

        <TableRow>
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewAddEncounterSecondStepText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50px"
                android:gravity="center"
                android:lineSpacingExtra="-20sp"
                android:text="@string/AdddEncounterStep2"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="24sp" />
        </TableRow>

        <TableRow>
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewAddEncounterAddInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="80px"
                android:gravity="center"
                android:text="@string/AdddEncounterAddInfoText"/>
        </TableRow>

        <TableRow>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/TextInputName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Your Name"/>

            </android.support.design.widget.TextInputLayout>
        </TableRow>
        <TableRow>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/TextInputMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Your Message to the world"/>

            </android.support.design.widget.TextInputLayout>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/large_text"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/ButtonSaveEncounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save"/>
        </TableRow>
    </TableLayout>
</android.support.v4.widget.NestedScrollView>
